@@ -1,3 +1,10 @@
+*otopi-1.2.0 (27 Mar 2014)
+
+  27 Mar 2014; Alon Bar-Lev <alonbl@gentoo.org> +otopi-1.2.0.ebuild,
+  -otopi-1.0.1.ebuild, -otopi-1.1.2.ebuild, -otopi-1.1.3.ebuild,
+  otopi-1.1.4.ebuild:
+  Version bump
+
 *otopi-1.1.4 (04 Mar 2014)
 
   04 Mar 2014; Alon Bar-Lev <alonbl@gentoo.org> +otopi-1.1.4.ebuild:
